# WaterSoundDetectionModel

modelo v3/: model_3.1.0.keras  model_3_1_0_improved.py  model_improved_int8.tflite
modelo v3.2/: Dockerfile  README.md  README_UV_SETUP.md  model_improved_3.2.keras  model_improved_3_2_1.keras  model_improved_int8_3_2.tflite  model_improved_int8_3_2_1.h  model_improved_int8_3_2_1.tflite  predict.py  predict_esp32.py  pyproject.toml  requirements.txt  summary_3_2.md  uv-requirements.txt
v3.0.0-New/v3.0.0/: Dockerfile  README_AUDIO_SAMPLES.md  README_TFLITE_TO_HEADER.md  README_UV_SETUP.md  Tutorial.txt  audio_samples.h  convert_audio_samples.py  mfcc_analysis_results.txt  model_3.0.0.keras  model_3.0.0.py  model_3.0.0.tflite  model_3.0.1.keras  model_3_0_0.h  model_improvements.md  predict.py  requirements.txt  script_predict.py  test_real_samples.h
