[project]
name = "modelo-v3-2"
version = "3.2.0"
description = "Machine Learning Model v3.2 for Audio Classification"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ProjectX Team"},
]

dependencies = [
    "absl-py==2.3.0",
    "astunparse==1.6.3",
    "audioread==3.0.1",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "flatbuffers==25.2.10",
    "fonttools==4.58.4",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.73.0",
    "h5py==3.14.0",
    "idna==3.10",
    "joblib==1.5.1",
    "keras==3.10.0",
    "kiwisolver==1.4.8",
    "lazy_loader==0.4",
    "libclang==18.1.1",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "Markdown==3.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.8.4",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "msgpack==1.1.1",
    "namex==0.1.0",
    "noisereduce==3.0.3",
    "numba==0.61.2",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "opt_einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "protobuf==5.29.5",
    "pycparser==2.22",
    "Pygments==2.19.1",
    "pyparsing==3.2.3",
    "pysound==0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "tensorflow_intel==2.18.0",
    "tensorflow_keras==0.1",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

# No build system needed - this is a dependency-only project

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
